--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <lixs.com.youkuvideobutton.YoukuPlayButtonView
         android:id="@+id/borderView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@color/white"/>
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:background="@color/white" />
 
 </LinearLayout>
